--- a/house.gov.by/21b9e23de458f0cc56f922a22b261011eada96c6.yml
+++ b/house.gov.by/21b9e23de458f0cc56f922a22b261011eada96c6.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 18 Oct 2017 10:56:40 GMT
+    - Thu, 19 Oct 2017 01:00:40 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=eq5er0142pd7hqetr8joihfj52; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 18 Oct 2017 10:56:40 GMT
+recorded_at: Thu, 19 Oct 2017 01:00:42 GMT
