--- a/house.gov.by/35350fb47d5a65216e747050ae245f4df20ac274.yml
+++ b/house.gov.by/35350fb47d5a65216e747050ae245f4df20ac274.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 18 Oct 2017 11:34:08 GMT
+    - Thu, 19 Oct 2017 01:11:52 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=kv7jh919ifecot518qnvjv3vp1; path=/
+    - PHPSESSID=59alkos5a06usgl9k74cute5q5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 18 Oct 2017 11:34:09 GMT
+recorded_at: Thu, 19 Oct 2017 01:11:53 GMT
