--- a/house.gov.by/2dd5adec3a457e2a3b0fef3f0889fe04d1870e5d.yml
+++ b/house.gov.by/2dd5adec3a457e2a3b0fef3f0889fe04d1870e5d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 18 Oct 2017 23:51:07 GMT
+    - Thu, 19 Oct 2017 01:18:33 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=bo750u1h9sfejibds6t06tnq33; path=/
+    - PHPSESSID=ep6230ns8ilchhjp5ro4lj27f2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 18 Oct 2017 23:51:08 GMT
+recorded_at: Thu, 19 Oct 2017 01:18:34 GMT
