--- a/house.gov.by/ee05aa364c6bfd50c59a9f3f647df095bd14d75c.yml
+++ b/house.gov.by/ee05aa364c6bfd50c59a9f3f647df095bd14d75c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 00:43:54 GMT
+    - Thu, 19 Oct 2017 01:31:03 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=i18a5uq3qhns11j9iipnlpfva4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 00:43:54 GMT
+recorded_at: Thu, 19 Oct 2017 01:31:04 GMT
