200 OK http://house.gov.by/ru/deputies-ru/view/zanko-sergej-554/

--- a/house.gov.by/fd869c3f613d876a0d82c8c94d3eb1366e20902f.yml
+++ b/house.gov.by/fd869c3f613d876a0d82c8c94d3eb1366e20902f.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 00:09:22 GMT
+    - Thu, 19 Oct 2017 01:36:15 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=b8tei4v0q59j92p9sab0emus61; path=/
+    - PHPSESSID=s5pr20usc1810oeeuc7n8f66t0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 00:09:24 GMT
+recorded_at: Thu, 19 Oct 2017 01:36:16 GMT
