--- a/house.gov.by/9a85211e61a86ce548cc5cf1a7cbfff538a6e9ea.yml
+++ b/house.gov.by/9a85211e61a86ce548cc5cf1a7cbfff538a6e9ea.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 01:12:58 GMT
+    - Thu, 19 Oct 2017 01:44:40 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=vsk8q5hf6tuaj133vie3uqpnn0; path=/
+    - PHPSESSID=5c17ejblkdo0enkfb3gf7nhoc5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 01:12:59 GMT
+recorded_at: Thu, 19 Oct 2017 01:44:41 GMT
