--- a/house.gov.by/6c00ea3b441533a219abd352fa8bcd894e43d78d.yml
+++ b/house.gov.by/6c00ea3b441533a219abd352fa8bcd894e43d78d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 00:28:16 GMT
+    - Thu, 19 Oct 2017 01:51:04 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=2k0jr1d5l2rdannqes8fu6l6f0; path=/
+    - PHPSESSID=bgpncen2e75bpebed7tdcf85g3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 00:28:17 GMT
+recorded_at: Thu, 19 Oct 2017 01:51:05 GMT
