--- a/house.gov.by/d873b2a79688823a0d023468255a348ebe0af01e.yml
+++ b/house.gov.by/d873b2a79688823a0d023468255a348ebe0af01e.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 00:48:27 GMT
+    - Thu, 19 Oct 2017 01:59:36 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=1u9gjv6evaafr1t2pmdc1peua0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 00:48:28 GMT
+recorded_at: Thu, 19 Oct 2017 01:59:36 GMT
