--- a/house.gov.by/89ff0502719991830a86af426f1d021d7bacf111.yml
+++ b/house.gov.by/89ff0502719991830a86af426f1d021d7bacf111.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 01:15:22 GMT
+    - Thu, 19 Oct 2017 02:00:50 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=egnm95loipqe3qc4m46769hhn2; path=/
+    - PHPSESSID=vohmrpec05o869fija91h70bu4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 01:15:23 GMT
+recorded_at: Thu, 19 Oct 2017 02:00:51 GMT
