--- a/house.gov.by/dc1c147be8c59110ac14e73189251cdb61ecb95c.yml
+++ b/house.gov.by/dc1c147be8c59110ac14e73189251cdb61ecb95c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 00:59:18 GMT
+    - Thu, 19 Oct 2017 02:03:01 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=s5vb87ku24db07moe3e89fo6b5; path=/
+    - PHPSESSID=q4sonokfnvavjveghdjo91p8t2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 00:59:19 GMT
+recorded_at: Thu, 19 Oct 2017 02:03:02 GMT
