--- a/house.gov.by/8994cfb10119f6028c06e0f21a0c4d67f4f2ec14.yml
+++ b/house.gov.by/8994cfb10119f6028c06e0f21a0c4d67f4f2ec14.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 00:28:43 GMT
+    - Thu, 19 Oct 2017 02:06:57 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=ndmpramjb7nil849889fbu2kh0; path=/
+    - PHPSESSID=jp44d5dakdo7o8lgnopsib00u1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 00:28:43 GMT
+recorded_at: Thu, 19 Oct 2017 02:06:57 GMT
