--- a/house.gov.by/f046772073a7c8c34da7ca236e04b15050649385.yml
+++ b/house.gov.by/f046772073a7c8c34da7ca236e04b15050649385.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 00:47:58 GMT
+    - Thu, 19 Oct 2017 02:35:46 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=u9me8f4tuq6vmougmvr6nh9um3; path=/
+    - PHPSESSID=r5de37h99aueaitp5bljdv4s17; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 00:47:59 GMT
+recorded_at: Thu, 19 Oct 2017 02:35:47 GMT
