--- a/house.gov.by/d598141b9b8846a40829a7d6da6d78656d7936d8.yml
+++ b/house.gov.by/d598141b9b8846a40829a7d6da6d78656d7936d8.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 18 Oct 2017 23:56:28 GMT
+    - Thu, 19 Oct 2017 02:40:51 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=1td7jnadtbr08j9hemkeenrld7; path=/
+    - PHPSESSID=ae90lmt7u2mlqc5akjjolned11; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 18 Oct 2017 23:56:28 GMT
+recorded_at: Thu, 19 Oct 2017 02:40:51 GMT
