--- a/house.gov.by/5bdaea91a3c0d6e18ed92838051a80b32621108b.yml
+++ b/house.gov.by/5bdaea91a3c0d6e18ed92838051a80b32621108b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 00:27:04 GMT
+    - Thu, 19 Oct 2017 02:42:53 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=21mer5tm4miemm6t0s83kf3p80; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 00:27:04 GMT
+recorded_at: Thu, 19 Oct 2017 02:42:54 GMT
