--- a/house.gov.by/778d300db4f1c8e9b4c35629d5885371d02152a7.yml
+++ b/house.gov.by/778d300db4f1c8e9b4c35629d5885371d02152a7.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 18 Oct 2017 23:49:45 GMT
+    - Thu, 19 Oct 2017 02:43:53 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=oe1fmcjqgtrtbi7a07bg7td9a5; path=/
+    - PHPSESSID=fk3d6ujgjsnj7g0q2e93mtkim1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 18 Oct 2017 23:49:46 GMT
+recorded_at: Thu, 19 Oct 2017 02:43:54 GMT
