--- a/house.gov.by/d873b2a79688823a0d023468255a348ebe0af01e.yml
+++ b/house.gov.by/d873b2a79688823a0d023468255a348ebe0af01e.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 01:59:36 GMT
+    - Thu, 19 Oct 2017 02:59:17 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=9l0ehk2atsne5h8su991q20qt4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 01:59:36 GMT
+recorded_at: Thu, 19 Oct 2017 02:59:19 GMT
