--- a/house.gov.by/cfd30729c5aa2b5af72e0e2251bb4620a2d190bb.yml
+++ b/house.gov.by/cfd30729c5aa2b5af72e0e2251bb4620a2d190bb.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 01:45:58 GMT
+    - Thu, 19 Oct 2017 02:59:45 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=99id3u3aicvicgf52fbakr0r83; path=/
+    - PHPSESSID=ve9hfto7hllihls4l6a47hcjj2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 01:45:59 GMT
+recorded_at: Thu, 19 Oct 2017 02:59:46 GMT
