--- a/house.gov.by/24f50492dfbf46c42fb96a17f622baf2498cbe23.yml
+++ b/house.gov.by/24f50492dfbf46c42fb96a17f622baf2498cbe23.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 02:02:05 GMT
+    - Thu, 19 Oct 2017 03:11:49 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=h3u1ujcee9gqhkq9tiojqoack4; path=/
+    - PHPSESSID=iogcltbkmfa4faf5v0eure24r1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 02:02:06 GMT
+recorded_at: Thu, 19 Oct 2017 03:11:50 GMT
