--- a/house.gov.by/61d2fb337605ce0e5df6b86e1c8c104dbc74308a.yml
+++ b/house.gov.by/61d2fb337605ce0e5df6b86e1c8c104dbc74308a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 01:22:02 GMT
+    - Thu, 19 Oct 2017 03:13:36 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=s5vg31vt503r9i8ca605b9ea52; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 01:22:02 GMT
+recorded_at: Thu, 19 Oct 2017 03:13:37 GMT
