--- a/house.gov.by/cc277f8d83c20d762a9925171dd9adadcb8ba0f8.yml
+++ b/house.gov.by/cc277f8d83c20d762a9925171dd9adadcb8ba0f8.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 02:50:00 GMT
+    - Thu, 19 Oct 2017 03:34:58 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=8lnd94bjglg68c1cdf60tdc044; path=/
+    - PHPSESSID=uphj4cgdgod4q5k9ji7emnvfl2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 02:50:01 GMT
+recorded_at: Thu, 19 Oct 2017 03:35:00 GMT
