--- a/house.gov.by/daaa73805e9fe148233c94c1671cd7492cf1b742.yml
+++ b/house.gov.by/daaa73805e9fe148233c94c1671cd7492cf1b742.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 02:02:33 GMT
+    - Thu, 19 Oct 2017 03:44:31 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=lklvh092liebtb06gbfpr1b477; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 02:02:33 GMT
+recorded_at: Thu, 19 Oct 2017 03:44:32 GMT
