200 OK http://house.gov.by/ru/deputies-ru/view/nexajchik-oksana-202/

--- a/house.gov.by/9eb274f9499e59ea06363c7ab477a87120d8e451.yml
+++ b/house.gov.by/9eb274f9499e59ea06363c7ab477a87120d8e451.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 02:41:25 GMT
+    - Thu, 19 Oct 2017 04:10:11 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=2q23phi664olraccdm5an3usd7; path=/
+    - PHPSESSID=r90jj6g08ot5ptt9oip27liai0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 02:41:26 GMT
+recorded_at: Thu, 19 Oct 2017 04:10:12 GMT
