200 OK http://house.gov.by/ru/deputies-ru/view/shilov-vitalij-563/

--- a/house.gov.by/c29402d0c0c4407341d5ac1cb15df6e786903128.yml
+++ b/house.gov.by/c29402d0c0c4407341d5ac1cb15df6e786903128.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 01:50:20 GMT
+    - Thu, 19 Oct 2017 04:14:46 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=jc17egs3b99l0bhjgspht79h82; path=/
+    - PHPSESSID=tkpb3usbisdfg3u2ldelu8mq01; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 01:50:21 GMT
+recorded_at: Thu, 19 Oct 2017 04:14:47 GMT
