200 OK http://house.gov.by/ru/deputies-ru/view/mychko-olga-627/

--- a/house.gov.by/d95e4c5cb66cff99aa795994d3afb30976236f73.yml
+++ b/house.gov.by/d95e4c5cb66cff99aa795994d3afb30976236f73.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 20:12:53 GMT
+    - Fri, 20 Oct 2017 21:41:34 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=8t6ed1domv00lgd9mik30jbfn6; path=/
+    - PHPSESSID=r9p65f7q55bvcuaqpv2l3bp2k1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 20:12:54 GMT
+recorded_at: Fri, 20 Oct 2017 21:41:34 GMT
