200 OK http://house.gov.by/ru/deputies-ru/view/korzh-ivan-562/

--- a/house.gov.by/67264dbb9e3cb974cdf5fbac85e5c34f3abbbc7b.yml
+++ b/house.gov.by/67264dbb9e3cb974cdf5fbac85e5c34f3abbbc7b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 19:50:38 GMT
+    - Sat, 21 Oct 2017 21:16:18 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=3gmvrsq5j6papc3fd7d3nm1fo4; path=/
+    - PHPSESSID=o949gdk8056vebukjpcm7do2n1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 19:50:39 GMT
+recorded_at: Sat, 21 Oct 2017 21:16:19 GMT
