200 OK http://house.gov.by/ru/deputies-ru/view/litvin-sergej-579/

--- a/house.gov.by/8994cfb10119f6028c06e0f21a0c4d67f4f2ec14.yml
+++ b/house.gov.by/8994cfb10119f6028c06e0f21a0c4d67f4f2ec14.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 19:55:34 GMT
+    - Sat, 21 Oct 2017 21:33:15 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=0giiu8b5mj1609ntpnoah258h7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 19:55:34 GMT
+recorded_at: Sat, 21 Oct 2017 21:33:15 GMT
