200 OK http://house.gov.by/ru/deputies-ru/view/bobrikov-sergej-626/

--- a/house.gov.by/46dfedc0d01f097096bf05cbbb3067cf518ec95c.yml
+++ b/house.gov.by/46dfedc0d01f097096bf05cbbb3067cf518ec95c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 22:40:22 GMT
+    - Sun, 22 Oct 2017 06:43:45 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=lqca8v1c4ib43kvagja29vn0o2; path=/
+    - PHPSESSID=6mgneect1ms7h9vt1it2bajr21; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 22:40:23 GMT
+recorded_at: Sun, 22 Oct 2017 06:43:46 GMT
