200 OK http://house.gov.by/ru/deputies-ru/view/segodnik-aleksandr-139/

--- a/house.gov.by/dc1c147be8c59110ac14e73189251cdb61ecb95c.yml
+++ b/house.gov.by/dc1c147be8c59110ac14e73189251cdb61ecb95c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 23:30:13 GMT
+    - Sun, 22 Oct 2017 07:58:25 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=kts55ahgjpjangrqj0tlopbsf1; path=/
+    - PHPSESSID=4ebroq69s4n6pd0hu37f1gh575; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 23:30:13 GMT
+recorded_at: Sun, 22 Oct 2017 07:58:25 GMT
