200 OK http://house.gov.by/ru/deputies-ru/view/kanopatskaja-anna-616/

--- a/house.gov.by/15fb64f9fa26c0fb584b1bed05a8d67488c339fa.yml
+++ b/house.gov.by/15fb64f9fa26c0fb584b1bed05a8d67488c339fa.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 07:06:52 GMT
+    - Sun, 22 Oct 2017 09:51:09 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=f5chhvb1ejn8p42sa46u4b4vt3; path=/
+    - PHPSESSID=ns8f3462qrt9suh9doabha83t7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 07:06:52 GMT
+recorded_at: Sun, 22 Oct 2017 09:51:10 GMT
