200 OK http://house.gov.by/ru/deputies-ru/view/tkachuk-anatolij-547/

--- a/house.gov.by/112adc08aa09be034f549c3a1c75bccb1324aeec.yml
+++ b/house.gov.by/112adc08aa09be034f549c3a1c75bccb1324aeec.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 08:27:54 GMT
+    - Sun, 22 Oct 2017 10:10:42 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=202evs8ifitadhfnfc5d2ij4k0; path=/
+    - PHPSESSID=r6boa3n72hh12v4slasd2hi480; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 08:27:54 GMT
+recorded_at: Sun, 22 Oct 2017 10:10:43 GMT
