200 OK http://house.gov.by/ru/deputies-ru/view/krasovskaja-tamara-181/

--- a/house.gov.by/03666e2052194ccd0d620d67ad9c3b5b50e78b2a.yml
+++ b/house.gov.by/03666e2052194ccd0d620d67ad9c3b5b50e78b2a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 09:18:43 GMT
+    - Sun, 22 Oct 2017 11:07:25 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=d87bupurnptbgdtdliskrmigm0; path=/
+    - PHPSESSID=ht6io4cn6g85n31n1vqhpumdk2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 09:18:44 GMT
+recorded_at: Sun, 22 Oct 2017 11:07:25 GMT
