200 OK http://house.gov.by/ru/deputies-ru/view/nizhevich-ljudmila-588/

--- a/house.gov.by/9c2d88cc13bd506ceba3c56e083f7cb1e73ee076.yml
+++ b/house.gov.by/9c2d88cc13bd506ceba3c56e083f7cb1e73ee076.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 10:40:32 GMT
+    - Mon, 23 Oct 2017 13:56:25 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=60lje4ir7f23bs5ktsji6siba5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 10:40:32 GMT
+recorded_at: Mon, 23 Oct 2017 13:56:25 GMT
