200 OK http://house.gov.by/ru/deputies-ru/view/sopikova-alla-213/

--- a/house.gov.by/88d267ba892b1d706108a63b82d4b21837e04636.yml
+++ b/house.gov.by/88d267ba892b1d706108a63b82d4b21837e04636.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 10:07:43 GMT
+    - Mon, 23 Oct 2017 14:12:46 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=j5p31fhbnia1ovgieostpi3u84; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 10:07:43 GMT
+recorded_at: Mon, 23 Oct 2017 14:12:47 GMT
