200 OK http://house.gov.by/ru/deputies-ru/view/shevtsov-dmitrij-234/

--- a/house.gov.by/a5a73b7476d4a0a00805b19eabbfecbb25c828a5.yml
+++ b/house.gov.by/a5a73b7476d4a0a00805b19eabbfecbb25c828a5.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 10:29:49 GMT
+    - Mon, 23 Oct 2017 14:25:31 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=b8e23brpva7hqmben8hsqhj3m3; path=/
+    - PHPSESSID=ngm0lj8s6ed8a955bh1dvo7qf0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 10:29:50 GMT
+recorded_at: Mon, 23 Oct 2017 14:25:32 GMT
