200 OK http://house.gov.by/ru/deputies-ru/view/chudovich-vitalij-558/

--- a/house.gov.by/9a85211e61a86ce548cc5cf1a7cbfff538a6e9ea.yml
+++ b/house.gov.by/9a85211e61a86ce548cc5cf1a7cbfff538a6e9ea.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 14:23:51 GMT
+    - Mon, 23 Oct 2017 14:48:29 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=gs65pb0dqbikg07mfetbb2l6t4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - UPDATING
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 14:23:52 GMT
+recorded_at: Mon, 23 Oct 2017 14:48:30 GMT
