200 OK http://house.gov.by/ru/deputies-ru/view/korzh-ivan-562/

--- a/house.gov.by/67264dbb9e3cb974cdf5fbac85e5c34f3abbbc7b.yml
+++ b/house.gov.by/67264dbb9e3cb974cdf5fbac85e5c34f3abbbc7b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 13:29:47 GMT
+    - Mon, 23 Oct 2017 14:51:40 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=f5cgs1ci631ede9g16ujdr2gt4; path=/
+    - PHPSESSID=qanl4f0slacq79kt9o1mgvuvv1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 13:29:47 GMT
+recorded_at: Mon, 23 Oct 2017 14:51:41 GMT
