200 OK http://house.gov.by/ru/deputies-ru/view/misko-maksim-625/

--- a/house.gov.by/5a4f6091558c47424aececa0159e0fca59f54d7a.yml
+++ b/house.gov.by/5a4f6091558c47424aececa0159e0fca59f54d7a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 13:48:45 GMT
+    - Mon, 23 Oct 2017 15:59:37 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=avdac4hhlvr83tusvkuf89fvb1; path=/
+    - PHPSESSID=ma102n1bekvub69r33j7sp5r00; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 13:48:45 GMT
+recorded_at: Mon, 23 Oct 2017 15:59:38 GMT
