200 OK http://house.gov.by/ru/deputies-ru/view/sokol-aleksej-624/

--- a/house.gov.by/34b939f57a446b8616b2a998ea274073dff804fd.yml
+++ b/house.gov.by/34b939f57a446b8616b2a998ea274073dff804fd.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 15:59:09 GMT
+    - Mon, 23 Oct 2017 16:23:54 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=fa8bvht3hq1vsea7f410qigkc7; path=/
+    - PHPSESSID=5352uiroljupt1louivtt3i8j3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 15:59:10 GMT
+recorded_at: Mon, 23 Oct 2017 16:23:55 GMT
