200 OK http://house.gov.by/ru/deputies-ru/view/adamenko-evgenij-570/

--- a/house.gov.by/97a79bb3d86184e516b5559a415c581e7f5221ce.yml
+++ b/house.gov.by/97a79bb3d86184e516b5559a415c581e7f5221ce.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 15:01:17 GMT
+    - Mon, 23 Oct 2017 16:45:29 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=5go6cstr1337ua3pcss0jbrn55; path=/
+    - PHPSESSID=a293vv10nr5jc17br7j0gk4dk1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 15:01:17 GMT
+recorded_at: Mon, 23 Oct 2017 16:45:30 GMT
