200 OK http://house.gov.by/ru/deputies-ru/view/brich-leonid-541/

--- a/house.gov.by/2dd5adec3a457e2a3b0fef3f0889fe04d1870e5d.yml
+++ b/house.gov.by/2dd5adec3a457e2a3b0fef3f0889fe04d1870e5d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 16:22:56 GMT
+    - Tue, 24 Oct 2017 04:51:39 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=2sion5re2886ssmeco631rt6n6; path=/
+    - PHPSESSID=94cbbugbkvjj09p14c9j6qd6a6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 16:22:57 GMT
+recorded_at: Tue, 24 Oct 2017 04:51:41 GMT
