200 OK http://house.gov.by/ru/deputies-ru/view/kananovich-ljudmila-594/

--- a/house.gov.by/1ae2fbafbfedff7028b54da2f7056f5bdc1df8e7.yml
+++ b/house.gov.by/1ae2fbafbfedff7028b54da2f7056f5bdc1df8e7.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Tue, 24 Oct 2017 05:10:37 GMT
+    - Wed, 25 Oct 2017 18:24:20 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=pa6o9aedpqp77drc00nato1ee2; path=/
+    - PHPSESSID=u52h5iq8t24edech3rp29m9j00; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 24 Oct 2017 05:10:38 GMT
+recorded_at: Wed, 25 Oct 2017 18:24:22 GMT
