200 OK http://house.gov.by/ru/deputies-ru/view/murina-julija-591/

--- a/house.gov.by/16d2a05b3da8a01604c1109b98ec431c66f25d8d.yml
+++ b/house.gov.by/16d2a05b3da8a01604c1109b98ec431c66f25d8d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 17:16:34 GMT
+    - Wed, 25 Oct 2017 18:51:23 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=6slf0nshlcdaqu28vqss5op4j0; path=/
+    - PHPSESSID=ll4tiii24jj3nbvoqapfnsvi97; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 17:16:35 GMT
+recorded_at: Wed, 25 Oct 2017 18:51:24 GMT
