200 OK http://house.gov.by/ru/deputies-ru/view/mychko-olga-627/

--- a/house.gov.by/d95e4c5cb66cff99aa795994d3afb30976236f73.yml
+++ b/house.gov.by/d95e4c5cb66cff99aa795994d3afb30976236f73.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 17:23:16 GMT
+    - Wed, 25 Oct 2017 18:51:47 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=4dagn07j7ht7m42tqg45v4c824; path=/
+    - PHPSESSID=k3th8uauk21qau3c3kq1k4uhu6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 17:23:17 GMT
+recorded_at: Wed, 25 Oct 2017 18:51:47 GMT
